--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="button_BS">~</string>
     <string name="button_Plus">+</string>
     <string name="button_Equal">=</string>
+    <string name="editText">xYz</string>
 </resources>
